--- a/src/python3_course_for_devs/notebooks/number.ipynb
+++ b/src/python3_course_for_devs/notebooks/number.ipynb
@@ -17,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## `int` 整型\n"
+    "## `int`\n"
    ]
   },
   {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
        "0"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
        "1"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "32"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
        "-32"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "20"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,16 +196,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "42"
+       "-42"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,9 +220,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 157,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 解析为十进制\n",
     "int(\"42\", 0)\n",
@@ -247,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -256,19 +267,20 @@
        "0.0"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 字面值形式\n",
+    "# 使用字面值形式\n",
     "# 小数\n",
     "1.1\n",
     "# 科学计数法表示\n",
     "2.5e2\n",
     "\n",
-    "# 通过 float 方法创建一个默认值为 0.0 的小数\n",
+    "# 使用 float 方法\n",
+    "# 创建一个默认值为 0.0 的小数\n",
     "float()"
    ]
   },
@@ -285,12 +297,12 @@
    "source": [
     "- 布尔型转浮点型\n",
     "\n",
-    "> Python 中布尔型是 int 类型的子类型，详细解释在[布尔型]('./bool.ipynb')\n"
+    "> Python 中布尔型是 int 类型的子类型，详细解释在[布尔型]('./bool.ipynb')。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +311,7 @@
        "1.0"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +338,7 @@
        "2.0"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +369,7 @@
        "20.0"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,16 +390,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "42.0"
+       "0.000123"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,14 +431,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 163,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0j"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 复数类型字面值\n",
+    "# 使用字面值形式\n",
     "1 + 2j\n",
     "\n",
-    "# 通过 complex 方法创建一个默认值为 0j 的复数\n",
+    "# 使用 complex 方法\n",
+    "# 创建一个默认值为 0j 的复数\n",
     "complex()"
    ]
   },
@@ -439,9 +463,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 164,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1+0j)"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 虚部不传\n",
     "complex(1)"
@@ -449,9 +484,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 165,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-1.1-1.2j)"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 浮点数\n",
     "complex(-1.1, -1.2)"
@@ -459,9 +505,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 166,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1j"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "complex(+False, -True)"
    ]
@@ -479,16 +536,27 @@
    "source": [
     "- 整数字面值字符串\n",
     "\n",
-    "  整数字面值字符串，可以带正负号，首尾也可以有空格\n",
+    "  可以带正负号，首尾也可以有空格\n",
     "\n",
-    "> `complex` 方法如果只传一个参数，可以是数字或者字符串，但传两个参数，那么两个参数都必须都是数字。\n"
+    "> `complex` 方法如果只传一个参数，可以是数字或者字符串，但传两个参数，那么两个参数必须都是数字。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 167,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-3+0j)"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "complex(\" -3 \")"
    ]
@@ -499,12 +567,151 @@
    "source": [
     "## 数字运算\n",
     "\n",
-    "tip：整数与浮点数运算，结果为浮点数\n"
+    "> 整数与浮点数运算，结果为浮点数。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 加减乘除\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15.0"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2 * (3 + 7) - 10 / 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 除法 `/`\n",
+    "\n",
+    "返回浮点数。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.0"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "10 / 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 地板除法 `//`\n",
+    "\n",
+    "向下取整。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "9 // 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.0"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "9.0 // 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 求余\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "17 % 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 幂运算\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -513,27 +720,13 @@
        "9"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 加减乘除\n",
-    "2 * (3 + 7) - 10 / 2\n",
-    "\n",
-    "# 除法 / 返回的是浮点数\n",
-    "9 / 2  # 4.5\n",
-    "\n",
-    "# 地板除法 // 向下取整\n",
-    "9 // 2  # 4\n",
-    "9.0 // 2  # 4.0\n",
-    "\n",
-    "# 求余\n",
-    "17 % 3  # 2\n",
-    "\n",
-    "# 幂运算\n",
-    "3**2  # 9"
+    "3**2"
    ]
   },
   {
@@ -552,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +754,7 @@
        "1"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +775,7 @@
        "10.0"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +798,7 @@
        "4"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +819,7 @@
        "4"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +840,7 @@
        "3.556"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +861,7 @@
        "8"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,16 +880,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "1"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,16 +903,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5"
+       "3"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,16 +924,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.07985496689478122"
+       "0.5344168093171395"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -752,16 +945,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6.2605546923115964"
+       "1.222013948006123"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,16 +966,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 5, 3, 8]"
+       "[5, 3, 1, 8]"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +1005,7 @@
        "(-0.3000000000000007, -10.0)"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
