--- a/src/python3_course_for_devs/notebooks/number.ipynb
+++ b/src/python3_course_for_devs/notebooks/number.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
        "0"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
        "1"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "32"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
        "-32"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "20"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "-42"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "42"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
        "0.0"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
        "1.0"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
        "2.0"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
        "20.0"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
        "0.000123"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
        "0j"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
        "(1+0j)"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
        "(-1.1-1.2j)"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
        "-1j"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
        "(-3+0j)"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
        "15.0"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
        "5.0"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
        "4"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +666,7 @@
        "4.0"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +693,7 @@
        "2"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +720,7 @@
        "9"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,19 +733,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 数字类型内置方法/标准库操作\n"
+    "## 数学操作\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 数学操作\n"
+    "绝对值\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -754,19 +754,25 @@
        "1"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 绝对值\n",
     "abs(-1)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "浮点数形式绝对值\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -775,21 +781,27 @@
        "10.0"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 浮点数形式绝对值\n",
     "import math\n",
     "\n",
     "math.fabs(-10)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "上取整\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -798,19 +810,25 @@
        "4"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 上取整\n",
     "math.ceil(3.3)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "下取整\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -819,19 +837,25 @@
        "4"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 下取整\n",
     "math.floor(4.9)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "四舍五入\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -840,19 +864,26 @@
        "3.556"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 四舍五入\n",
-    "round(3.55555, 3)  # 保留 3 位小数"
+    "# 保留 3 位小数\n",
+    "round(3.55555, 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "幂运算\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -861,13 +892,13 @@
        "8"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 幂运算：等同于 2**3\n",
+    "# 等同于 2**3\n",
     "pow(2, 3)"
    ]
   },
@@ -879,17 +910,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "从一个序列随机取值\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "5"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -897,43 +935,56 @@
    "source": [
     "import random\n",
     "\n",
-    "# 从一个序列随机取值\n",
     "random.choice([1, 5, 3, 4])"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "从指定范围内随机抽取，支持设定梯度\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "5"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 从指定范围内随机抽取，支持设定梯度\n",
-    "random.randrange(1, 9, 2)  # 从 1 到 9 随机取值，间隔为 2，等同于从 [1, 3, 5, 7] 中随机取值"
+    "# 从 1 到 9 随机取值，间隔为 2，等同于从 [1, 3, 5, 7] 中随机取值\n",
+    "random.randrange(1, 9, 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "随机数生成\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.5344168093171395"
+       "0.3221063793357958"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,16 +996,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.222013948006123"
+       "2.2055115603545197"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -965,17 +1016,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "随机排序\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[5, 3, 1, 8]"
+       "[5, 3, 8, 1]"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
@@ -1005,7 +1063,7 @@
        "(-0.3000000000000007, -10.0)"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 220,
      "metadata": {},
      "output_type": "execute_result"
     }
