--- a/src/python3_course_for_devs/notebooks/string.ipynb
+++ b/src/python3_course_for_devs/notebooks/string.ipynb
@@ -4,30 +4,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 字符串类型\n",
+    "# 字符串\n",
     "\n",
-    "字符串是`序列类型`但非`可变类型`，（`可变类型`和`序列类型`的概念在 [数据类型]('./types.ipynb') 有讲）\n",
+    "字符串是 [序列类型]('./types.ipynb')。\n",
     "\n",
-    "先回想一下 `序列类型` 的通用操作有哪些？\n"
+    "先回想一下 `序列类型` 的特性有哪些。\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 创建一个字符串\n"
+    "## 字符串创建\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 通过字面值形式创建\n"
+    "使用字面值形式\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -36,20 +36,18 @@
        "'this a str'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 215,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 单双引号都可以\n",
-    "\n",
-    "\"this a str\""
+    "\"this a str\"  # 单双引号都可以"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +62,8 @@
     }
    ],
    "source": [
-    "# 多行字符串，可以实现换行输出，注意：不建议用这种方式作为注释\n",
+    "# 多行字符串，可实现换行输出\n",
+    "# 注意：不建议用这种方式作为注释\n",
     "\n",
     "print(\n",
     "    \"\"\"this\n",
@@ -76,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -89,14 +88,12 @@
     }
    ],
    "source": [
-    "# 在字符串当中使用转义符\n",
-    "\n",
-    "print(\"this is a \\n str\")"
+    "print(\"this is a \\n str\")  # 使用转义符"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
@@ -122,56 +119,311 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 原始字符串\n"
+    "使用 `str` 方法\n",
+    "\n",
+    "默认创建一个空字符串。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "this is a \\n str\n"
-     ]
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 219,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 原始字符串的 \\ 不转义，直接显示\n",
-    "print(r\"this is a \\n str\")"
+    "str()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 字面量格式化字符串 f-string\n"
+    "## 特殊字符串\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `f-string`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`f-string` 是一种字符串格式化语法，它使用前缀 `f` 来标识。`f-string` 中使用花括号 `{}` 嵌入表达式，`{}` 内部可以包含变量、字面值、函数调用等。\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 220,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1+1 = 2'"
+      ]
+     },
+     "execution_count": 220,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f\"1+1 = {1+1}\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "在 `f-string` 中使用 `=` 符号时，`=` 左边是表达式本身，而右边会计算并显示表达式的值。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1+1 = 2'"
+      ]
+     },
+     "execution_count": 221,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f\"{1+1 = }\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `r-string`\n",
+    "\n",
+    "`r-string` 表示原始字符串，它使用前缀 `r` 来标识。`r-string` 中的 `\\` 不转义，而是以字面形式表示。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1+1 = 2\n",
-      "1+1 = 2\n"
+      "C:\\network\\tiktok\n"
      ]
     }
    ],
    "source": [
-    "# f-string 可以在字符串中插入表达式\n",
+    "print(r\"C:\\network\\tiktok\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 字符串转换\n",
     "\n",
-    "print(f\"1+1 = {1+1}\")\n",
+    "字符串的类型转换用的还是 `str` 方法。\n",
     "\n",
-    "# 甚至可以这样，f-string 能自动计算结果并补全\n",
+    "> 方法 `str` 通过调用对象内部的魔术方法 `__str__` 或 `__repr__` 完成字符串转换。所有定义了 `__str__` 或 `__repr__` 魔术方法的对象都可以通过 `str` 方法创建字符串。\n",
     "\n",
-    "print(f\"{1+1 = }\")"
+    "> [什么是魔术方法？]('./magic_method.ipynb')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 数字转字符串\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1'"
+      ]
+     },
+     "execution_count": 223,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 列表转字符串\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'[1, 2, 3]'"
+      ]
+     },
+     "execution_count": 224,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str([1, 2, 3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 集合转字符串\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{1, 2, 3}'"
+      ]
+     },
+     "execution_count": 225,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str({1, 2, 3})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 字典转字符串\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"{'a': 1, 'b': 2}\""
+      ]
+     },
+     "execution_count": 226,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str({\"a\": 1, \"b\": 2})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 元组转字符串\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'(1, 2, 3)'"
+      ]
+     },
+     "execution_count": 227,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str((1, 2, 3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 实现了 `__str__` 方法的自定义类对象\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'foo'"
+      ]
+     },
+     "execution_count": 228,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class MyStrClass:\n",
+    "    def __init__(self, value):\n",
+    "        self.value = value\n",
+    "\n",
+    "    # 注意：__str__ 返回的必须是 str 型\n",
+    "    def __str__(self) -> str:\n",
+    "        return self.value\n",
+    "\n",
+    "    def __repr__(self) -> str:\n",
+    "        return self.value\n",
+    "\n",
+    "\n",
+    "my_str = MyStrClass(\"foo\")\n",
+    "str(my_str)"
    ]
   },
   {
@@ -182,67 +434,232 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 迭代\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "this is a sequence type, but str str\n",
-      "36\n",
-      "10 18\n",
-      "s s\n",
-      "sequence\n",
-      "True True\n",
-      "  y\n",
-      "2\n",
-      " \n",
-      "s\n",
-      "t\n",
+      "b\n",
+      "a\n",
       "r\n"
      ]
     }
    ],
    "source": [
-    "a = \"this is a sequence type, but\"\n",
-    "b = \" str\"\n",
-    "\n",
-    "# 连接、重复\n",
-    "s = a + b * 2  # 字符串 b 重复两次之后和字符串 a 连接\n",
-    "print(s)\n",
-    "\n",
-    "# 长\n",
-    "l = len(s)\n",
-    "print(l)\n",
-    "\n",
-    "# 元素位置获取\n",
-    "i1 = s.index(\"sequence\")\n",
-    "# 字符串还可以通过 find 方法获取元素位置，区别是找不到元素时返回 -1，而不是报错\n",
-    "i2 = s.find(\" type\")\n",
-    "print(i1, i2)\n",
-    "\n",
-    "# 索引访问\n",
-    "s[i1]  # 正索引，从左向右索引从 0 开始\n",
-    "s[i1 - l]  # 负索引，从右向左索引从 -1 开始\n",
-    "print(s[i1], s[i1 - l])\n",
-    "\n",
-    "# 切片\n",
-    "print(s[i1:i2])\n",
-    "\n",
-    "# 成员运算\n",
-    "print(b in s, b not in a)\n",
-    "\n",
-    "# 最大/最小元素，对比的是元素字典顺序\n",
-    "print(min(s), max(s))\n",
-    "\n",
-    "# 元素出现次数，支持指定查找范围\n",
-    "print(s.count(\"str\", 0, len(s)))\n",
-    "\n",
-    "# 迭代\n",
-    "for char in b:\n",
+    "for char in \"bar\":\n",
     "    print(char)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 索引访问\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'b'"
+      ]
+     },
+     "execution_count": 230,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"bar\"[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'r'"
+      ]
+     },
+     "execution_count": 231,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"bar\"[-1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 切片\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ba'"
+      ]
+     },
+     "execution_count": 232,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"bar\"[0:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'br'"
+      ]
+     },
+     "execution_count": 233,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"bar\"[0:3:2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 元素查找\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 245,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"bar\".index(\"a\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> 字符串还有一个用于查找子字符串位置的方法 `find`。它返回子字符串在原字符串中第一次出现的索引，如果未找到，则返回 -1，而不是像 `index` 一样引发 `ValueError` 异常。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 248,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"bar\".find(\"f\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 拼接、重复\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'foobarbar'"
+      ]
+     },
+     "execution_count": 246,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"foo\" + \"bar\" * 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 计数\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 247,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"foo\".count(\"o\")"
    ]
   },
   {
@@ -254,16 +671,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'This a str'"
+       "'This is a sequence type, but'"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 235,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,16 +692,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'--------------------this a str--------------------'"
+       "'-----------this is a sequence type, but-----------'"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 236,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,16 +713,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'this a str----------------------------------------'"
+       "'this is a sequence type, but----------------------'"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 237,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,16 +734,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'----------------------------------------this a str'"
+       "'----------------------this is a sequence type, but'"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,16 +754,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "b'this a str'"
+       "b'this is a sequence type, but'"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,16 +775,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'this a str'"
+       "'this is a sequence type, but'"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,16 +796,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,16 +817,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 242,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 242,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a.startswith(\"str\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +846,7 @@
        "'a  b  c '"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,25 +858,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7\n"
+      "-1\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "7"
-      ]
-     },
-     "execution_count": 143,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValueError",
+     "evalue": "substring not found",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/Users/songbinghui/Desktop/my_dev/typescript-inspired-python3-learning/src/python3_course_for_devs/notebooks/string.ipynb Cell 51\u001b[0m line \u001b[0;36m4\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/songbinghui/Desktop/my_dev/typescript-inspired-python3-learning/src/python3_course_for_devs/notebooks/string.ipynb#X34sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# 检索最后一次出现的索引\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/songbinghui/Desktop/my_dev/typescript-inspired-python3-learning/src/python3_course_for_devs/notebooks/string.ipynb#X34sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mprint\u001b[39m(a\u001b[39m.\u001b[39mrfind(\u001b[39m\"\u001b[39m\u001b[39mstr\u001b[39m\u001b[39m\"\u001b[39m))\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/songbinghui/Desktop/my_dev/typescript-inspired-python3-learning/src/python3_course_for_devs/notebooks/string.ipynb#X34sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m a\u001b[39m.\u001b[39;49mrindex(\u001b[39m\"\u001b[39;49m\u001b[39mstr\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
+      "\u001b[0;31mValueError\u001b[0m: substring not found"
+     ]
     }
    ],
    "source": [
