--- a/src/python3_course_for_devs/notebooks/number.ipynb
+++ b/src/python3_course_for_devs/notebooks/number.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
        "0"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,11 @@
    "source": [
     "### 整型转换\n",
     "\n",
-    "整数的类型转换用的还是 `int` 方法。\n"
+    "整数的类型转换用的还是 `int` 方法。\n",
+    "\n",
+    "> 方法 `int` 通过调用对象内部的魔术方法 `__int__` 完成整型转换。所有定义了 `__int__` 魔术方法的对象都可以通过 `int` 方法创建数字。\n",
+    "\n",
+    "> [什么是魔术方法？]('./magic_method.ipynb')\n"
    ]
   },
   {
@@ -75,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +88,7 @@
        "1"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +117,7 @@
        "32"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +137,7 @@
        "-32"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,16 +150,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 实现了 `__int__` 方法的对象\n",
-    "\n",
-    "> 方法 `int` 调用对象内部的魔术方法 `__int__` 完成整型转换。\n",
-    "\n",
-    "> [什么是魔术方法？]('./magic_method.ipynb')\n"
+    "- 实现了 `__int__` 方法的自定义类对象\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "20"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "-42"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "42"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
        "0.0"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
        "1.0"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
        "2.0"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +351,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 实现了 `__float__` 方法的对象\n",
+    "- 实现了 `__float__` 方法的自定义类对象\n",
     "\n",
     "> 方法 `float` 调用对象内部的魔术方法 `__float__` 完成浮点数转换。\n",
     "\n",
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
        "20.0"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
        "0.000123"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
        "0j"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
        "(1+0j)"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
        "(-1.1-1.2j)"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
        "-1j"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
        "(-3+0j)"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
        "15.0"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
        "5.0"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +646,7 @@
        "4"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +666,7 @@
        "4.0"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +693,7 @@
        "2"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +720,7 @@
        "9"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +754,7 @@
        "1"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +781,7 @@
        "10.0"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +810,7 @@
        "4"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +837,7 @@
        "4"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +864,7 @@
        "3.556"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
        "8"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -927,7 +927,7 @@
        "5"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -947,16 +947,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5"
+       "1"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -975,16 +975,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3221063793357958"
+       "0.4291940217022573"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,16 +996,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.2055115603545197"
+       "5.220154937186419"
       ]
      },
-     "execution_count": 218,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,16 +1024,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[5, 3, 8, 1]"
+       "[8, 1, 5, 3]"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1063,7 +1063,7 @@
        "(-0.3000000000000007, -10.0)"
       ]
      },
-     "execution_count": 220,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
